--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -9,16 +9,14 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <!-- <ion-title size="large">SimpleWheater</ion-title> -->
-      <app-explore-container name="Simple Wheater"></app-explore-container>
+      <!-- <ion-title size="large">SimpleWeather</ion-title> -->
+      <app-explore-container name="Simple Weather"></app-explore-container>
     </ion-toolbar>
   </ion-header>
   
   <ion-card>
     <ion-item>
-      <!-- <ion-icon name="pin" slot="start"></ion-icon> -->
       <ion-label>Next hours</ion-label>
-      <!-- <ion-button fill="outline" slot="end">View</ion-button> -->
     </ion-item>
   
   
