--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -9,8 +9,8 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <!-- <ion-title size="large">SimpleWheater</ion-title> -->
-      <app-explore-container name="Simple Wheater"></app-explore-container>
+      <!-- <ion-title size="large">Simpleweather</ion-title> -->
+      <app-explore-container name="Simple Weather"></app-explore-container>
     </ion-toolbar>
   </ion-header>
   
@@ -56,9 +56,7 @@
   
   <ion-card>
     <ion-item>
-      <!-- <ion-icon name="pin" slot="start"></ion-icon> -->
       <ion-label>Next 5 Days</ion-label>
-      <!-- <ion-button fill="outline" slot="end">View</ion-button> -->
     </ion-item>
     <ion-item  >
       <div><img src={{icon510}} size="small"/></div>
